removing last waves and fixing some bugs on mobile

--- a/scss/layout/_charts.scss
+++ b/scss/layout/_charts.scss
@@ -33,3 +33,12 @@
         }
     }
 }
+
+@media only screen and (max-width: 768px){
+
+    .charts{
+        &__wave-container{
+            display: none;
+        }
+    }
+}
