--- a/scss/layout/_features.scss
+++ b/scss/layout/_features.scss
@@ -7,8 +7,7 @@
     //border: 1px solid red;
 
     &__sleep{
-        width: 480px;
-        height: 650px;
+       // padding: 200px;
         max-width: 100%;
         max-height: 100%;
         background: url(/images/Features-sleep-track.png);
@@ -23,8 +22,8 @@
     }
 
     &__workout{
-        width: 480px;
-        height: 650px;
+        //width: 480px;
+        //height: 650px;
         background: url(/images/Features-workout-summary.png);
         margin-left: 3.75em;
         margin-bottom: 70px;
@@ -46,6 +45,22 @@
             top: 15px;
             left: 50%;
             //border: 1px solid red;
+        }
+    }
+}
+
+@media only screen and (max-width: 768px){
+
+    .features{
+        flex-direction: column;
+
+        &__wave-container{
+            //border: 1px solid blue;
+            position: relative;
+            
+            img:first-child{
+                display: none;
+            }
         }
     }
 }
